[feat] adapt 1.16.4